test/types/chplhashtable/resize-threshold-oob2.chpl
use Map;

var m = new map(int,int,resizeThreshold=0);
